@@ -1,3 +1,8 @@
+2018-10-23  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* riscv-tdep.c (riscv_register_name): Use the user-friendly names
+	for CSRs.
+
 2018-10-23  Joel Brobecker  <brobecker@adacore.com>
 
 	* riscv-tdep.c (riscv_gdbarch_init): Set the gdbarch's
